remove workflow-service-sdk dependency from prebuilt-tasks